# C-Colors

./: CMakeLists.txt  colors.c  colors.h  main.c
